--- a/package.json
+++ b/package.json
@@ -5,11 +5,29 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "format": "prettier . --write",
+    "prepare": "husky"
   },
   "author": "vrybachenko",
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.6.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^17.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
+    "prettier": "^3.8.1"
+  },
+  "lint-staged": {
+    "**/*.{js,json,md}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
