--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:allure": "rm -rf allure-results && jest && allure serve allure-results",
+    "allure:report": "allure serve allure-results",
     "lint": "eslint .",
     "format": "prettier . --write",
     "prepare": "husky"
@@ -13,14 +16,19 @@
   "author": "vrybachenko",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.5",
     "chalk": "^5.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/jest": "^30.0.0",
+    "allure-commandline": "^2.36.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^17.3.0",
     "husky": "^9.1.7",
+    "jest": "^30.2.0",
+    "jest-allure2-reporter": "^2.3.0",
     "lint-staged": "^15.5.2",
     "prettier": "^3.8.1"
   },
